syntax = "proto3";
package Pylonstech.pylons.pylons;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
// this line is used by starport scaffolding # proto/tx/import
import "pylons/item.proto";
import "pylons/recipe.proto";
import "pylons/cookbook.proto";

option go_package = "github.com/Pylons-tech/pylons/x/pylons/types";

// Msg defines the Msg service.
service Msg {
  // this line is used by starport scaffolding # proto/tx/rpc
  rpc CreateItem(MsgCreateItem) returns (MsgCreateItemResponse);
  rpc UpdateItem(MsgUpdateItem) returns (MsgUpdateItemResponse);
  rpc DeleteItem(MsgDeleteItem) returns (MsgDeleteItemResponse);
  rpc CreateRecipe(MsgCreateRecipe) returns (MsgCreateRecipeResponse);
  rpc UpdateRecipe(MsgUpdateRecipe) returns (MsgUpdateRecipeResponse);
  rpc CreateCookbook(MsgCreateCookbook) returns (MsgCreateCookbookResponse);
  rpc UpdateCookbook(MsgUpdateCookbook) returns (MsgUpdateCookbookResponse);
}

// this line is used by starport scaffolding # proto/tx/message
message MsgCreateItem {
  string creator = 1;
  string ID = 2;
  string cookbookID = 3;
  string nodeVersion = 4;
  repeated DoubleKeyValue Doubles = 5 [(gogoproto.nullable) = false];
  repeated LongKeyValue Longs = 6 [(gogoproto.nullable) = false];
  repeated StringKeyValue Strings = 7 [(gogoproto.nullable) = false];
  string ownerRecipeID = 9;
  string ownerTradeID = 10;
  bool tradable = 11;
  uint64 lastUpdate = 12;
  uint64 transferFee = 13;
}
message MsgCreateItemResponse { }

message MsgUpdateItem {
  string creator = 1;
  string ID = 2;
  string cookbookID = 3;
  string nodeVersion = 4;
  repeated DoubleKeyValue Doubles = 5 [(gogoproto.nullable) = false];
  repeated LongKeyValue Longs = 6 [(gogoproto.nullable) = false];
  repeated StringKeyValue Strings = 7 [(gogoproto.nullable) = false];
  string ownerRecipeID = 9;
  string ownerTradeID = 10;
  bool tradable = 11;
  uint64 lastUpdate = 12;
  uint64 transferFee = 13;
}
message MsgUpdateItemResponse { }

message MsgDeleteItem {
  string creator = 1;
  string ID = 2;
}
message MsgDeleteItemResponse { }

message MsgCreateRecipe {
  string creator = 1;
  string cookbookID = 2;
  string ID = 3;
  string name = 4;
  string description = 5;
  string version = 6;
  repeated cosmos.base.v1beta1.Coin coinInputs = 7 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  repeated ItemInput itemInputs = 8 [(gogoproto.nullable) = false];
  EntriesList entries = 9 [(gogoproto.nullable) = false];
  repeated WeightedOutputs outputs = 10 [(gogoproto.nullable) = false];
  uint64 blockInterval = 11;
  bool enabled = 12;
  string extraInfo = 13;
}
message MsgCreateRecipeResponse { }

message MsgUpdateRecipe {
  string creator = 1;
  string cookbookID = 2;
  string ID = 3;
  string name = 4;
  string description = 5;
  string version = 6;
  repeated cosmos.base.v1beta1.Coin coinInputs = 7 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
  repeated ItemInput itemInputs = 8 [(gogoproto.nullable) = false];
  EntriesList entries = 9 [(gogoproto.nullable) = false];
  repeated WeightedOutputs outputs = 10 [(gogoproto.nullable) = false];
  uint64 blockInterval = 11;
  bool enabled = 12;
  string extraInfo = 13;
}
message MsgUpdateRecipeResponse { }

message MsgCreateCookbook {
  string creator = 1;
  string ID = 2;
  string name = 3;
  string description = 4;
  string developer = 5;
  string version = 6;
  string supportEmail = 7;
  int64 tier = 8;
  uint64 costPerBlock = 9;
  bool enabled = 10;
}
message MsgCreateCookbookResponse { }

message MsgUpdateCookbook {
  string creator = 1;
  string ID = 2;
  string name = 3;
  string description = 4;
  string developer = 5;
  string version = 6;
  string supportEmail = 7;
  int64 tier = 8;
  uint64 costPerBlock = 9;
  bool enabled = 10;
}
message MsgUpdateCookbookResponse { }

